--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-REACT_APP_API_ENDPOINT="http://localhost:4000/api/"
+# REACT_APP_API_ENDPOINT="https://motivation-backend-1.onrender.com/api/" 
+REACT_APP_API_URL=https://motivation-backend-1.onrender.com/api/
+
+
+# REACT_APP_API_ENDPOINT="http://localhost:4000/api/"
